--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Oculus#1</title>
-</head>
-<body>
-    <div id="root"></div>
-    <script src="./js/index.js" type="module"></script>
-</body>
+    <link rel="stylesheet" href="./index.css">
+    <title>Oculus</title>
+  </head>
+  <body>
+		<div id="root">
+    </div>
+    <script async src="./js/index.js" type="module"></script>
+  </body>
 </html>
